Fixed layout bug

--- a/html/css/student/request-details.css
+++ b/html/css/student/request-details.css
@@ -39,7 +39,7 @@ h2 {
     color: white;
     text-decoration: none;
     display: inline-block;
-    padding: 8px 16px;
+    padding: 4px 8px;
     float:right;
     margin-top: 16px
 }
